assets/src/components/base/FeedbackButton/FeedbackButton.css
.feedback-button {
	display: flex;
	justify-content: center;
	align-items: center;
}

.feedback-button::part(label) {
	transition: transform var(--scale-animation-duration);
	will-change: transform;
}

.feedback-button--confirm::part(label) {
	transform: scale(1.8);
}

.feedback-button__tooltip::part(base) {
	background-color: var(--sl-color-neutral-300);
}

.feedback-button__tooltip::part(body) {
	background-color: var(--bg-gray);
	border: 1px solid var(--sl-color-neutral-300);
	pointer-events: all;
	padding: 0;
	color: var(--text-primary);
}

.feedback-button__tooltip::part(base__popup) {
	pointer-events: all;
	box-shadow: var(--sl-shadow-x-large);
}

.feedback-button__tooltip::part(base__arrow) {
	background-color: var(--bg-gray);
	border: 1px solid var(--sl-color-neutral-300);
	z-index: 10;
	border-right: 0;
	border-bottom: 0;
}

.feedback-button__tooltip-content {
	font-size: 12px;
	padding: 30px;
	position: relative;
	box-shadow: var(--sl-shadow-x-large);
	display: flex;
	gap: 12px;
	overflow: auto;
}

.feedback-button__tooltip-content sl-button {
	display: block;
	margin-top: 8px;
}

.feedback-button__tooltip-content sl-button::part(base) {
	height: unset;
	min-height: unset;
	line-height: unset;
	padding: 2px 0;
}

.feedback-button__tooltip-content sl-button::part(label) {
	font-size: 11px;
}

.feedback-button__tooltip-content .feedback-button__tooltip-icon-error,
.feedback-button__tooltip-content .feedback-button__tooltip-icon-info {
	position: relative;
	top: 2px;
	font-size: 16px;
	padding-bottom: 5px;
}

.feedback-button__tooltip-content .feedback-button__tooltip-icon-error {
	color: var(--sl-color-danger-500);
}

.feedback-button__tooltip-content .feedback-button__tooltip-icon-info {
	color: var(--sl-color-primary-500);
}

.feedback-button__tooltip-icon-close {
	position: absolute;
	right: 12px;
	top: 10px;
	cursor: pointer;
}

.feedback-button__tooltip-error {
	user-select: text;
}

